--- a/about.html
+++ b/about.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+
+  <nav>
+    <div>
+        <img class="logo" src="img/lambda-black.png">
+    </div>
+    <div class="links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </div>
+</nav>
+
+<header>
+    <img src="img/jumbo-about.png" alt="City horizon">
+</header>
+
     <div class="container about-page">
      
     About
@@ -62,7 +80,7 @@
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
+          <a href="about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
